fix spacing

--- a/cms/medexCms/staticfiles/scss/examinations/partials/case_breakdown_forms.scss
+++ b/cms/medexCms/staticfiles/scss/examinations/partials/case_breakdown_forms.scss
@@ -4,7 +4,7 @@
     margin-top: $medex-spacing-xl;
 
     .form-picker {
-        margin-top: $medex-spacing-lg;
+        margin-top: $medex-spacing-md;
     }
 
     .event-form {
